add menu and router for test, todo: roles selection at login page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<block-ui>
+
+  <menu *ngIf="isAuth() && hasLogin()"></menu>
+
+  <router-outlet></router-outlet>
+
+</block-ui>
