--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,39 @@
-<div class="col-sm-4 col-sm-4 col-md-4 col-lg-4 col-xs-offset-4 col-sm-offset-4 col-md-offset-4 col-lg-offset-4 main">
+<div class="col-4 col-sm-4 col-md-4 col-lg-4 col-offset-4 col-sm-offset-4 col-md-offset-4 col-lg-offset-4 col-xl-offset-4 main">
   <h1 class="page-header">使用者登入</h1>
 
-  <div class="table-responsive">
-    <form #loginForm="ngForm" (submit)="doLogin(loginForm)">
-      <div class="form-group">
-        <label for="name">員工編號</label>
-        <input class="form-control" type="text" id="name" name="name" [ngModel]="loginUser.name" required/>
-        <label for="password">LDAP密碼</label>
-        <input class="form-control" type="password" id="password" name="password" [ngModel]="loginUser.password" required/>
+  <div class="panel panel-primary">
+    <div class="panel-heading">登入資訊</div>
+    <div class="panel-body">
+      <form #loginForm="ngForm" (submit)="doLogin(loginForm)">
+        <div class="form-group">
 
-        <hr>
-        <button class="btn btn-primary" type="submit" [disabled]="!loginForm.valid">登入</button>
-      </div>
-    </form>
+          <div class="input-group">
+              <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+              <input class="form-control" placeholder="員工編號" type="text" id="name" name="name" [ngModel]="authService.loginUser.name" required/>
+          </div>
+          <div class="input-group">
+              <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+              <input class="form-control" placeholder="LDAP密碼" type="password" id="password" name="password" [ngModel]="authService.loginUser.password" required/>
+          </div>
+          <div class="input-group">
+              <span class="input-group-addon"><i class="glyphicon glyphicon-education"></i></span>
+
+          </div>
+
+          <div *ngIf="(authService.uiErrorMsg)" >
+            <br>
+            <div class="alert alert-danger" role="alert">{{authService.uiErrorMsg}}</div>
+          </div>
+          <hr>
+          <div align="center">
+            <button class="btn btn-primary" type="submit" [disabled]="!loginForm.valid">登入</button>
+          </div>
+
+
+        </div>
+      </form>
+    </div>
   </div>
+
 
 </div>
