--- a/src/app/main/asset/asset.component.html
+++ b/src/app/main/asset/asset.component.html
@@ -1,3 +1,5 @@
-<p>
-  asset works!
-</p>
+<div class="col-lg-10 col-lg-offset-1">
+<h2 class="sub-header">終端設備查改</h2>
+<ci-search></ci-search>
+
+</div>
