:memo: 調整動態元件, todo: 換頁沒辦法清掉dynamic component問題

--- a/src/app/main/asset/asset.component.html
+++ b/src/app/main/asset/asset.component.html
@@ -1,5 +1,10 @@
 <div class="col-lg-10 col-lg-offset-1">
-<h2 class="sub-header">終端設備查改</h2>
+<h2 class="sub-header">終端設備查改({{specService.page=='asset' ? '資訊設備' : '機房設備'}})</h2>
 <ci-search></ci-search>
+
+<!--<ngx-datatable
+        [rows]="rows"
+        [columns]="columns">
+</ngx-datatable>-->
 
 </div>
