--- a/src/app/main/menu/menu.component.html
+++ b/src/app/main/menu/menu.component.html
@@ -15,17 +15,17 @@
           <a class="dropdown-toggle"><icon p="hdd"></icon>資產管理 <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a routerLink="asset-registry">資產登打</a></li>
-            <li><a routerLink="asset">終端設備查改</a></li>
+            <li><a routerLink="asset/asset">終端設備查改</a></li>
             <li><a >資產關係維護</a></li>
           </ul>
         </li>
         <li class="dropdown" submenu>
           <a class="dropdown-toggle"><icon p="home"></icon>機房管理 <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a >機房設備查改</a></li>
-            <li><a >機房設備進駐</a></li>
-            <li><a >機房設備移出(報廢)</a></li>
-            <li><a >機房設備移轉</a></li>
+            <li><a routerLink="asset/idcasset">機房設備查改</a></li>
+            <li><a routerLink="assetin">機房設備進駐</a></li>
+            <li><a routerLink="assetout">機房設備移出(報廢)</a></li>
+            <li><a routerLink="assetexchange">機房設備移轉</a></li>
           </ul>
         </li>
         <li class="dropdown" submenu>
