--- a/src/app/shared/ci-search/ci-search.component.html
+++ b/src/app/shared/ci-search/ci-search.component.html
@@ -9,7 +9,7 @@
           <div class="form-group">
               <div class="input-group">
                 <span class="input-group-addon"><i [class]="icon_clazz"></i>查詢類別</span>
-                <select class="form-control" name="ciselect" id="ciselect" [(ngModel)]="selected" (change)="specService.selectCIOption($event)" >
+                <select class="form-control" name="ciselect" id="ciselect" [(ngModel)]="specService.selected" (change)="specService.selectCIOption($event)" >
                   <option *ngFor="let ciopt of specService.cioptions" [ngValue]="ciopt">{{ciopt.name}}</option>
                 </select>
               </div>
@@ -26,13 +26,17 @@
                         [p]="spec.p" ngModel >
            </dynamic-html>
         </div>
+
         <div align="center">
           <div *ngIf="(specService.uiErrorMsg)" >
             <div class="alert alert-danger" role="alert">{{specService.uiErrorMsg}}</div>
           </div>
           <button class="btn btn-success" type="submit" [disabled]="!queryForm.valid">開始查詢</button>
         </div>
+
     </form>
+
+    {{queryForm.value|json}}
 
   </div>
 </div>
