--- a/src/app/shared/ldap-menu/ldap-menu.component.html
+++ b/src/app/shared/ldap-menu/ldap-menu.component.html
@@ -1,3 +1,11 @@
-<p>
-  ldap-menu works!
-</p>
+<div>
+    <select class="form-control" name="_comname" id="comid" [(ngModel)]="_selectCom"  (change)="onChangeSelectCom($event)" [disabled]="comdisabled" [required]="comrequired">
+      <option *ngFor="let option of optionsCom" [ngValue]="option">{{option.name}}</option>
+    </select>
+    <select class="form-control" name="_orgname" id="orgid" [(ngModel)]="_selectOrg"  (change)="onChangeSelectOrg($event)" [disabled]="orgdisabled" [required]="orgrequired">
+      <option *ngFor="let option of optionsOrg" [ngValue]="option">{{option.name}}</option>
+    </select>
+    <select class="form-control" name="_unitname" id="unitid" [(ngModel)]="_selectUnit"  (change)="onChangeSelectUnit($event)" [disabled]="unitdisabled" [required]="unitrequired">
+      <option *ngFor="let option of optionsUnit" [ngValue]="option">{{option.name}}</option>
+    </select>
+</div>
