:memo: fix ldap-menu bugs

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,7 +29,7 @@
           <div align="center">
             <button class="btn btn-success" type="submit" [disabled]="!loginForm.valid">登入</button>
             <button class="btn btn-success" type="button" (click)="testSelectEvent($event)">測式</button>
-            <ldap-menu [name]="'name111'" [(ngModel)]="testModel" ></ldap-menu>
+            <ldap-menu name="name111" [(ngModel)]="testModel" [optionsCom]="optionsCom" [optionsOrg]="optionsOrg" [optionsUnit]="optionsUnit" ></ldap-menu>
           </div>
 
         </div>
