--- a/src/app/shared/ci-search/ci-search.component.html
+++ b/src/app/shared/ci-search/ci-search.component.html
@@ -4,9 +4,7 @@
   </div>
   <div class="panel-body">
 
-    <form #queryForm="ngForm" (submit)="doSubmit(queryForm)">
-
-          <div class="form-group">
+      <div class="form-group">
               <div class="input-group">
                 <span class="input-group-addon"><i [class]="icon_clazz"></i>查詢類別</span>
                 <select class="form-control" name="ciselect" id="ciselect" [(ngModel)]="specService.selected" (change)="specService.selectCIOption($event)" >
@@ -15,15 +13,26 @@
               </div>
           </div>
 
+
+    <form #queryForm="ngForm" (submit)="doSubmit(queryForm)">
+
         <div class="form-group" *ngFor="let spec of specService.specs">
           <!--{{spec|json}}-->
           <dynamic-html [label]="spec.label"
                         [dynamicType]="spec.dynamicType"
                         [name]="spec.name"
                         [options]="spec.options"
+                        [dateOptions]="spec.dateOptions"
                         [required]="spec.required"
                         [disabled]="spec.disabled"
-                        [p]="spec.p" ngModel >
+                        [placeholder]="spec.placeholder"
+                        [optionsCom]="spec.optionsCom"
+                        [optionsOrg]="spec.optionsOrg"
+                        [optionsUnit]="spec.optionsUnit"
+                        [p]="spec.p"
+                         ngModel
+                          (changeSelectCom)="selectCom($event,spec)"
+                          (changeSelectOrg)="selectOrg($event,spec)">
            </dynamic-html>
         </div>
 
