--- a/src/app/shared/dynamic-html/dynamic-html.component.html
+++ b/src/app/shared/dynamic-html/dynamic-html.component.html
@@ -66,11 +66,14 @@
 
   <div class="input-group" *ngIf="dynamicType == 'DatePicker'">
     <span class="input-group-addon"><i [class]="icon_clazz"></i>{{label}}</span>
-    <my-date-picker name="mydate" [(ngModel)]="dateModel" [options]="dateOptions" (dateChanged)="onDateChanged($event)" ></my-date-picker>
+    <my-date-picker [name]="name" [(ngModel)]="dateModel" [options]="dateOptions" (dateChanged)="onDateChanged($event)" ></my-date-picker>
   </div>
 
 
   <div class="input-group" *ngIf="dynamicType == 'SelectLDAP'">
     <span class="input-group-addon"><i [class]="icon_clazz"></i>{{label}}</span>
-
+    <ldap-menu [name]="name" [(ngModel)]="ldapModel" [optionsCom]="optionsCom" [optionsOrg]="optionsOrg" [optionsUnit]="optionsUnit"
+        (changeSelectCom)="onChangeSelectCom($event)"
+        (changeSelectOrg)="onChangeSelectOrg($event)"
+        (changeSelectUnit)="onChangeSelectUnit($event)" ></ldap-menu>
   </div>
