--- a/src/app/shared/dynamic-html/dynamic-html.component.html
+++ b/src/app/shared/dynamic-html/dynamic-html.component.html
@@ -1,7 +1,7 @@
 
   <div class="input-group" *ngIf="dynamicType == 'InputText'">
     <span class="input-group-addon"><i [class]="icon_clazz"></i>{{label}}</span>
-    <input class="form-control" [id]="id" [name]="name" [placeholder]="placeholder" type="text" [value]="value" (blur)="onInputBlur($event)"  [required]="required" [disabled]="disabled" />
+    <input class="form-control" [name]="name" [placeholder]="placeholder" type="text" [value]="value" (blur)="onInputBlur($event)"  [required]="required" [disabled]="disabled" />
   </div>
 
 
@@ -23,7 +23,7 @@
 
   <div class="input-group" *ngIf="dynamicType == 'InputPasswordText'">
     <span class="input-group-addon"><i [class]="icon_clazz"></i>{{label}}</span>
-    <input class="form-control" [id]="id" [name]="name" [placeholder]="placeholder" type="password" [value]="value" (blur)="onInputBlur($event)"  [required]="required" [disabled]="disabled" />
+    <input class="form-control" [name]="name" [placeholder]="placeholder" type="password" [value]="value" (blur)="onInputBlur($event)"  [required]="required" [disabled]="disabled" />
   </div>
 
 
@@ -52,7 +52,7 @@
 
   <div class="input-group" *ngIf="dynamicType == 'SelectManyMenu'">
     <span class="input-group-addon"><i [class]="icon_clazz"></i>{{label}}</span>
-    <select class="form-control" [name]="name" [id]="id" [(ngModel)]="selects"  (click)="onChangeSelectMany($event)" multiple [disabled]="disabled" [required]="required">
+    <select class="form-control" [name]="name" [(ngModel)]="selects"  (change)="onChangeSelectMany($event)" multiple [disabled]="disabled" [required]="required">
       <option *ngFor="let option of options" [ngValue]="option">{{option.name}}</option>
     </select>
   </div>
