--- a/src/app/shared/ci-search/ci-search.component.html
+++ b/src/app/shared/ci-search/ci-search.component.html
@@ -1,12 +1,12 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
-    <icon p="search"></icon>  查詢區塊
+    <icon [p]="searchIcon"></icon>  {{searchTitle}}
   </div>
   <div class="panel-body">
 
     <div class="form-group">
       <div class="input-group">
-        <span class="input-group-addon"><i [class]="icon_clazz"></i>查詢類別</span>
+        <span class="input-group-addon"><i [class]="icon_clazz"></i>{{searchSubtitle}}</span>
           <select class="form-control" name="ciselect" id="ciselect" [(ngModel)]="specService.selected" (change)="specService.selectCIOption($event)" >
             <option *ngFor="let ciopt of specService.cioptions" [ngValue]="ciopt">{{ciopt.name}}</option>
           </select>
