--- a/src/app/shared/dynamic-html/dynamic-html.component.html
+++ b/src/app/shared/dynamic-html/dynamic-html.component.html
@@ -66,7 +66,9 @@
 
   <div class="input-group" *ngIf="dynamicType == 'DatePicker'">
     <span class="input-group-addon"><i [class]="icon_clazz"></i>{{label}}</span>
-    <my-date-picker [name]="name" [(ngModel)]="dateModel" [options]="dateOptions" (dateChanged)="onDateChanged($event)" ></my-date-picker>
+    <my-date-picker [name]="name" [(ngModel)]="dateModel" [options]="dateOptions"
+      (dateChanged)="onDateChanged($event)"
+      (inputFieldChanged)="onInputFieldChanged($event)" ></my-date-picker>
   </div>
 
 
