--- a/src/app/main/asset/asset.component.html
+++ b/src/app/main/asset/asset.component.html
@@ -1,6 +1,8 @@
 <div class="col-lg-10 col-lg-offset-1">
 <h2 class="sub-header">終端設備查改({{specService.page=='asset' ? '資訊設備' : '機房設備'}})</h2>
-<ci-search searchIcon="search" searchTitle="查詢區塊" searchSubtitle="查詢種類"></ci-search>
+<ci-search searchIcon="search"
+    searchTitle="查詢區塊" searchSubtitle="查詢種類"
+    searchBtnName="開始查詢" (formSubmit)="searchSubmit($event)" ></ci-search>
 
 <!--<ngx-datatable
         [rows]="rows"
