--- a/src/app/shared/ci-search/ci-search.component.html
+++ b/src/app/shared/ci-search/ci-search.component.html
@@ -40,7 +40,7 @@
           <div *ngIf="(specService.uiErrorMsg)" >
             <div class="alert alert-danger" role="alert">{{specService.uiErrorMsg}}</div>
           </div>
-          <button class="btn btn-success" type="submit" [disabled]="!queryForm.valid">開始查詢</button>
+          <button class="btn btn-success" type="submit" [disabled]="!queryForm.valid">{{searchBtnName}}</button>
         </div>
 
     </form>
