--- a/src/app/main/asset/asset-registry.component.html
+++ b/src/app/main/asset/asset-registry.component.html
@@ -1,6 +1,6 @@
 <div class="col-lg-10 col-lg-offset-1">
 <h2 class="sub-header">新增資產</h2>
-<ci-search searchIcon="search" searchTitle="查詢區塊"
+<ci-search searchIcon="plus" searchTitle="輸入區塊"
     searchSubtitle="新增資產種類" searchBtnName="確認新增"
     (formSubmit)="createSubmit($event)" ></ci-search>
 
