:memo: add ldap menu

--- a/src/app/main/menu/menu.component.html
+++ b/src/app/main/menu/menu.component.html
@@ -14,7 +14,7 @@
         <li class="dropdown" submenu>
           <a class="dropdown-toggle"><icon p="hdd"></icon>資產管理 <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a routerLink="asset-registry">資產登打</a></li>
+            <li><a routerLink="asset-registry/registry">資產登打</a></li>
             <li><a routerLink="asset/asset">終端設備查改</a></li>
             <li><a >資產關係維護</a></li>
           </ul>
