:memo: fix select level 1 menu option can't clean level 2 menu bugs

--- a/src/app/shared/ci-search/ci-search.component.html
+++ b/src/app/shared/ci-search/ci-search.component.html
@@ -29,6 +29,9 @@
                         [optionsCom]="spec.optionsCom"
                         [optionsOrg]="spec.optionsOrg"
                         [optionsUnit]="spec.optionsUnit"
+                        [comrequired]="spec.comrequired" [comdisabled]="spec.comdisabeld"
+                        [orgrequired]="spec.orgrequired" [orgdisabled]="spec.orgdisabled"
+                        [unitrequired]="spec.unitrequired" [unitdisabled]="spec.unitdisabled"
                         [p]="spec.p"
                          ngModel
                           (changeSelectCom)="selectCom($event,spec)"
