:memo: two column

--- a/src/app/main/asset/asset.component.html
+++ b/src/app/main/asset/asset.component.html
@@ -14,8 +14,7 @@
 
 
     <ul class="nav nav-tabs">
-      <li [class.active]="tabName == 1" ><a class="nav-link" (click)="getData1();">終端資產</a></li>
-      <li [class.active]="tabName == 2" ><a class="nav-link" (click)="getData2()">其它資產</a></li>
+      <li *ngFor="let item of tabNames" [class.active]="item == selectTab" ><a class="nav-link" (click)="getData(item);">{{item}}</a></li>
     </ul>
 
     <div class="tab-content">
